<resources>
    <string name="app_name">home</string>
    <string name="user_login">登录</string>
    <string name="user_register">注册</string>
    <string name="user_login_user_hint">请输入账号</string>
    <string name="user_login_password_hint">请输入密码</string>
    <string name="user_login_re_password_hint">再次输入密码</string>
    <string name="user_login_password_equals_hint">两次输入密码不一致</string>
    <string name="user_login_register_hint">还没有账号,立即注册</string>
    <string name="user_login_checked_password">记住密码</string>
    <string name="user_login_state_success">登录成功</string>
    <string name="user_login_state_load">登录中</string>
    <string name="user_login_state_retry">重新登录</string>
    <string name="user_wanandroid">WanAndroid</string>
    <string name="user_about_jet_pack">JetPack</string>
    <string name="user_about_title">关于</string>
    <string name="user_share_title">分享</string>
    <string name="user_setting_title">设置</string>
    <string name="user_remove_disk_cache">缓存大小:%s(点击清除)</string>
    <string name="user_goto_store">去评价</string>
    <string name="user_upgrade">检测更新</string>
    <string name="user_caton">提交卡顿</string>


    <!--Preference Key-->
    <string name="user_preference_color">preferenceColor</string>
    <string name="user_preference_animation">preferenceAnimation</string>
    <string name="user_preference_article">preferenceArticle</string>
    <string name="user_preference_tag">preferenceTag</string>
    <string name="user_preference_model">preferenceModel</string>
</resources>
