<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLogin"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGreen"
            android:paddingStart="@dimen/dp_40"
            android:paddingTop="@dimen/dp_40"
            android:paddingEnd="@dimen/dp_0"
            android:paddingBottom="@dimen/dp_80"
            android:text="@string/user_login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_22" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_120"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            app:cardCornerRadius="@dimen/dp_10">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editLoginUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/user_login_user_hint"
                    android:paddingTop="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_20"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/lineLoginUser"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/colorLine"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editLoginUser" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/user_login_password_hint"
                    android:inputType="textPassword"
                    android:paddingTop="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_20"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lineLoginUser" />

                <View
                    android:id="@+id/lineLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/colorLine"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editLoginPassword" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLoginChecked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/lineLoginPassword"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkBoxPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/user_login_checked_password"
                    android:textSize="@dimen/context_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lineLoginPassword" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/dp_20"
                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="@string/user_login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/title_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxPassword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRegisterHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_20"
                    android:text="@string/user_login_register_hint"
                    android:textSize="@dimen/context_sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>